--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/x-data-grid": "^6.18.7",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.5",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "mdbreact": "^5.2.0",
     "next": "14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
